[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/object/RolePanel.gd" type="Script" id=1]
[ext_resource path="res://font/font_siteName.tres" type="DynamicFont" id=2]
[ext_resource path="res://font/font_uiState.tres" type="DynamicFont" id=3]
[ext_resource path="res://scene/Battle/misc/PassiveSkillView.tscn" type="PackedScene" id=4]

[node name="RolePanel" type="WindowDialog"]
visible = true
margin_left = 441.0
margin_top = 164.0
margin_right = 775.0
margin_bottom = 509.0
script = ExtResource( 1 )

[node name="mingziLabel" type="Label" parent="."]
margin_left = 12.0
margin_top = 8.0
margin_right = 309.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = "雷恩"
align = 1
valign = 1

[node name="lvLabel" type="Label" parent="."]
margin_left = 99.0
margin_top = 50.0
margin_right = 396.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 2 )
text = "lv1"
align = 1
valign = 1

[node name="titleLabel" type="Label" parent="."]
margin_left = -42.0
margin_top = 48.0
margin_right = 255.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "勇者"
align = 1
valign = 1

[node name="Label4" type="Label" parent="."]
margin_left = 83.0
margin_top = 150.0
margin_right = 173.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 3 )
text = "攻击："
valign = 1

[node name="Label7" type="Label" parent="."]
margin_left = 83.0
margin_top = 89.0
margin_right = 173.0
margin_bottom = 123.0
custom_fonts/font = ExtResource( 3 )
text = "生命："
valign = 1

[node name="Label8" type="Label" parent="."]
margin_left = 83.0
margin_top = 117.0
margin_right = 173.0
margin_bottom = 151.0
custom_fonts/font = ExtResource( 3 )
text = "魔法："
valign = 1

[node name="Label5" type="Label" parent="."]
margin_left = 84.0
margin_top = 179.0
margin_right = 174.0
margin_bottom = 213.0
custom_fonts/font = ExtResource( 3 )
text = "防御："
valign = 1

[node name="Label6" type="Label" parent="."]
margin_left = 84.0
margin_top = 211.0
margin_right = 174.0
margin_bottom = 245.0
custom_fonts/font = ExtResource( 3 )
text = "速度："
valign = 1

[node name="Label9" type="Label" parent="."]
margin_left = 83.0
margin_top = 242.0
margin_right = 173.0
margin_bottom = 276.0
custom_fonts/font = ExtResource( 3 )
text = "技能:"
valign = 1

[node name="hpLabel" type="Label" parent="."]
margin_left = 153.0
margin_top = 91.0
margin_right = 243.0
margin_bottom = 125.0
custom_fonts/font = ExtResource( 3 )
text = "100"
align = 2
valign = 1

[node name="mpLabel" type="Label" parent="."]
margin_left = 153.0
margin_top = 118.0
margin_right = 243.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 3 )
text = "100"
align = 2
valign = 1

[node name="atkLabel" type="Label" parent="."]
margin_left = 153.0
margin_top = 150.0
margin_right = 243.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 3 )
text = "100"
align = 2
valign = 1

[node name="defLabel" type="Label" parent="."]
margin_left = 153.0
margin_top = 176.0
margin_right = 243.0
margin_bottom = 210.0
custom_fonts/font = ExtResource( 3 )
text = "100"
align = 2
valign = 1

[node name="speedLabel" type="Label" parent="."]
margin_left = 153.0
margin_top = 209.0
margin_right = 243.0
margin_bottom = 243.0
custom_fonts/font = ExtResource( 3 )
text = "100"
align = 2
valign = 1

[node name="skillPlace" type="VBoxContainer" parent="."]
margin_left = 153.0
margin_top = 250.0
margin_right = 317.0
margin_bottom = 334.0

[node name="PassiveSkillView" parent="skillPlace" instance=ExtResource( 4 )]

